--- a/nestjsApi/redis/1.基础安装使用.md
+++ b/nestjsApi/redis/1.基础安装使用.md
@@ -12,31 +12,10 @@ const redis = new Redis({
 });
 
 const res = await redis.keys("*");
-
 console.log(res);
 
 // index.js 文件
 // https://github.com/redis/node-redis
-
-import { createClient } from "redis";
-
-const client = createClient({
-  // url: 'redis://alice:foobared@awesome.redis.server:6380'
-  // ErrorReply: NOAUTH Authentication required.
-  password: "admin123",
-  // socket: {}
-});
-
-client.on("error", (err) => console.log("Redis Client Error", err));
-
-await client.connect();
-
-await client.set("key", "new value");
-const value = await client.get("key");
-console.log(value);
-
-await client.disconnect();
-
 ```
 
 ### nestjs 安装使用
@@ -48,6 +27,10 @@ npm install fastify-redis
 npm install @types/ioredis
 // 如果使用 JavaScript 则需要安装 轻量级客户端
 npm install ioredis
+// 使用插件, 主要是处理依赖关系
+npm install @liaoliaots/nestjs-redis
+// nestjs 使用 redis 配置
+npm install @nestjs/config
 ```
 
 1.引入 redis 模块和 NestJS 的 CommonModule 模块
@@ -62,103 +45,130 @@ import { RedisModule } from 'nestjs-redis';
     imports: [
         // 在构造函数中直接创建 Redis 客户端
         // https://github.com/skunight/nestjs-redis/issues/97
-        RedisModule.register({
-            // password: 'admin123',
-            name: 'test',
-            url: 'redis://:admin123@127.0.0.1:6379/0',
-            onClientReady: (client) => {
-                client.on('error', (err) => {
-                    console.log(err, 'err');
-                });
+        RedisModule.forRoot({
+            config: {
+                // url: 'redis://localhost:6379', // Redis的连接URL
+                host: 'localhost',
+                port: 6379,
+                // password: 'admin123456', // 如果Redis设置了密码，需要在这里提供， 默认是不需要密码的
+                // db: 0, // 使用的数据库，默认是0
+                // 其他可选配置
+                // keyPrefix: 'myapp:', // 所有存储在Redis中的键的前缀
+                // name: 'myapp', // 连接的名称，如果你有多个Redis连接，可以使用这个名称来获取特定的连接
+                lazyConnect: true, // 是否在启动时立即连接Redis，默认是false
+                reconnectOnError: (err) => { // 当连接出错时，是否尝试重新连接
+                    console.error(err);
+                    return true;
+                }
             }
         }),
     ]
 })
 export class AppModule {}
+```
 
-// server 
-import { Controller, Get } from '@nestjs/common';
-import { AppService } from './app.service';
 
-@Controller()
-export class AppController {
-  constructor(private readonly appService: AppService) {}
-
-  @Get()
-  async getHello(): Promise<string> {
-    return this.appService.getHello();
-  }
-}
-
-2.引入 redis 模块和 NestJS 的 CommonModule 模块
-// 第二种方式 如果只有一个服务需要使用Redis客户端，那么可以使用这种方式
-// 优点: 是可以直接在服务中注入和使用Redis客户端，而不需要导入任何模块。
-// 缺点: 是如果有多个服务需要使用Redis客户端，那么每个服务都需要在providers数组中创建一个Redis客户端，这会导致代码重复
-@Module({
-    imports: [],
-    controllers: [],
-    providers: [
-        DefaultService, // 自定义的server 
-        {
-            provide: 'REDIS_CLIENT',
-            async useFactory() {
-                const client = createClient({
-                password: 'root123456',
-            });
-            await client.connect();
-                client.on('error', (err) => console.log('Redis Client Error', err));
-                return client;
-            }
-        }
-    ]
-})
-
-// server 
-import { Inject, Injectable } from '@nestjs/common';
-import { RedisClientType } from 'redis';
+2.使用 Redis 通过装饰器： 
+```JS
+import { Injectable, NotFoundException } from '@nestjs/common';
+import { InjectRepository } from '@nestjs/typeorm';
+import { Repository } from 'typeorm';
+import { InjectRedis, DEFAULT_REDIS_NAMESPACE } from '@liaoliaots/nestjs-redis';
+import Redis from 'ioredis';
+import { AclDto } from './acl.dto';
+import { User } from '@/typeorm/mysql/user.entity';
+// https://github.com/liaoliaots/nestjs-redis/blob/HEAD/docs/latest/redis.md 使用方式
 
 @Injectable()
-export class DefaultService {
-    @Inject('REDIS_CLIENT') // 需要将REDIS_CLIENT注入到redisClient属性中
-    private redisClient: RedisClientType; // 私有属性redisClient
+export class AclService {
+    constructor(
+        // 通过装饰器：
+        @InjectRedis() private readonly redis: Redis, // or // @InjectRedis(DEFAULT_REDIS_NAMESPACE) private readonly redis: Redis
+        @InjectRepository(User) private readonly userRepository: Repository<User>
+    ){}     // 其他权限控制逻辑
 
-    async getHello(): Promise<string> {
-        const value = await this.redisClient.keys('*'); // 获取Redis数据库中所有的键
-        return `Hello World! ${value}`;
+    // 获取全部 redis 储存参数
+    async getAllRedis() {
+        const keys = await this.redis.keys('*');
+        const result = {};
+        for (const key of keys) {
+            result[key] = await this.redis.get(key);
+        }
+        return result;
+    }
+
+    // 将用户的权限信息存储在redis中
+    async setPermission(body: AclDto): Promise<any>{
+        const user = await this.userRepository.findOne({ where: { username: body.userName } });
+
+        if(user) {
+            await this.redis.set(user.username, user.password, 'EX', 100);
+            const userRedis = await this.getCheckPermission(user.username);
+            return {
+                key: user.username,
+                value: userRedis
+            };
+        } else {
+            return {
+                msg: '用户不存在'
+            }
+        }
+    }
+
+    // 查看
+    async getCheckPermission(userId: string){
+        return await this.redis.get(userId);
+    }
+
+    // 更新 如果键不存在，会抛出一个NotFoundException
+    async putPermission(userId: string): Promise<void> {
+        const exists = await this.redis.exists(userId);
+        if (exists === 0) {
+            throw new NotFoundException(`Key ${userId} does not exist`);
+        }
+        await this.redis.set(userId, '666', 'EX', 100);
+
+    }
+
+    // 删除
+    async delPermission(userId: string): Promise<void> {
+        const exists = await this.redis.exists(userId);
+        if (exists === 0) {
+            throw new NotFoundException(`Key ${userId} does not exist`);
+        }
+        await this.redis.del(userId)
     }
 }
 ```
 
-3. server 增删改查
-我们注册了 Redis 模块并提供了连接配置。现在，我们可以在我们的 Service 或 Controller 中使用 Redis
-我们通过 @Inject('REDIS_CLIENT') 从模块中获取 Redis 客户端实例。我们还编写了几个 Redis 操作方法：set、get 和 del。
-现在，我们已经可以在我们的代码中使用 Redis 并保存和获取数据
+2.通过服务来获取 redis 实例
 ```JS
-// server 
-import { Inject, Injectable } from '@nestjs/common';
-import * as Redis from 'ioredis';
+import { Injectable } from '@nestjs/common';
+import { RedisService, DEFAULT_REDIS_NAMESPACE } from '@liaoliaots/nestjs-redis';
+import Redis from 'ioredis';
 
+// 通过服务来获取 redis 实例，默认从 DEFAULT_REDIS_NAMESPACE 下获取(另一种是通过装饰器)
 @Injectable()
-export class RedisService {
-    private readonly client: Redis.Redis;
-    // 通过依赖注入获取 Redis 客户端
-    constructor(@Inject('REDIS_CLIENT') client: Redis.Redis) {
-        this.client = client;
+export class AppService {
+    private readonly redis: Redis;
+
+    constructor(private readonly redisService: RedisService) {
+        this.redis = this.redisService.getClient();
+        // or
+        // this.redis = this.redisService.getClient(DEFAULT_REDIS_NAMESPACE);
     }
-    // 将数据存储到 Redis，数据可以是任何类型，会被转换为 JSON 字符串
-    async set(key: string, value: any) {
-        return await this.client.set(key, JSON.stringify(value));
-    }
-    // 从 Redis 获取数据，数据会被解析为 JSON 对象
-    async get(key: string) {
-        const result = await this.client.get(key);
-        return JSON.parse(result);
-    }
-    // 从 Redis 删除数据
-    async del(key: string) {
-        return await this.client.del(key);
+    
+    // 查看所有的 redis 储存
+    async set() {
+        const client = this.redisService.getClient();
+        const keys = await client.keys('*');
+        const result = {};
+        for(const key of keys) {
+            const value = await client.get(key);
+            result[key] = value;
+        }
+        return result;
     }
 }
-
 ```
 
