基于 Redis 实现分布式 session

--- a/nestjsApi/redis/2.其他使用方式.md
+++ b/nestjsApi/redis/2.其他使用方式.md
@@ -52,3 +52,49 @@ export class RedisService {
     }
 }
 ```
+
+### connect-redis 和 ioredis, redis 区别和一起使用
+
+1.相同点:
+connect-redis 和 ioredis 都是与 Redis 数据库交互的 Node.js 库，但它们的用途和功能有所不同
+2.不同点:
+connect-redis: 这是一个用于 Express.js 的 session 存储的中间件，它允许你将 session 数据存储在 Redis 数据库中,
+               本身并不直接与 Redis 数据库进行通信，而是依赖于一个 Redis 客户端（例如 node-redis 或 ioredis）来完成这个工作
+ioredis: 这是一个全功能的 Redis 客户端，用于 Node.js。它支持所有的 Redis 命令，并提供了许多高级功能，例如支持集群、支持发布/订阅模式、支持 Lua 脚本等。你可以使用 ioredis 来执行任何 Redis 命令，包括但不限于存储和检索数据、管理 Redis 配置、监听 Redis 事件等
+在实际使用中，你可能会同时使用 connect-redis 和 ioredis。例如，你可以使用 ioredis 作为 Redis 客户端，然后将其传递给 connect-redis，以便将 session 数据存储在 Redis 中
+安装:
+```JS
+npm install express-session connect-redis ioredis
+```
+第一种使用方式 案例: nestjs 基于 Redis 实现分布式 session
+```JS
+import { NestFactory } from '@nestjs/core';
+import * as session from 'express-session';
+import { createClient } from 'ioredis';
+import connectRedis from 'connect-redis';
+import { AppModule } from './app.module';
+
+// 全局使用
+
+async function bootstrap() {
+    const app = await NestFactory.create(AppModule);
+    
+    const RedisStore = connectRedis(session);
+    const redisClient = new Redis();
+
+    use.use({
+        session({
+            store: new RedisStore({ client: redisClient }),
+            secret: 'your-secret-key',
+            resave: false,
+            saveUninitialized: false,
+        })
+    })
+}
+bootstrap()
+```
+
+
+
+
+
